syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/types/chain";

package chain;

// Information about a Chain
message Chain {
    // Chain ID
    // e.g. 1 for mainnet, 3 for Ropsten
    string chain_id = 1;

    // UUID in the chain registry
    string uuid = 2;

    // Name in the chain registry
    string name = 3;
}
