syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/pkg.git/types/common";

package common;

// Information about a Chain
message Chain {
    // Chain ID
    // e.g. 1 for mainnet, 3 for Ropsten
    string id = 1;

    // Indicate if chain implements EIP155 (TODO: should be removed)
    bool isEIP155 = 2; 
}
